dataset1235/2025-2/1153765216/users/416059210/executions/2372395858_2011582555.log
== RUN (2025-08-28 19:10:49)
-- CODE: 
from math import *
CL = float(input())
ap = CL / 2 . tan pi/6
area = 3. CL . ap



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:10:48)
-- CODE: 
from math import *
CL = float(input())
ap = CL / 2 . tan pi/6
area = 3. CL . ap



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 3
    ap = CL / 2 . tan pi/6
                      ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:28:18)
-- CODE: 
from math import *
CL = float(input())
ap =  CL / 2 . tanpi/6
area = 3. CL . ap



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 4
    area = 3. CL . ap
              ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 4
    area = 3. CL . ap
              ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 4
    area = 3. CL . ap
              ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 4
    area = 3. CL . ap
              ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 4
    area = 3. CL . ap
              ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 4
    area = 3. CL . ap
              ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:01:11)
-- CODE: 
from math import *
CL = float(input())
AP = CL / 2.tan pi/6
area = 3. CL . AP



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 3
    AP = CL / 2.tan pi/6
               ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 3
    AP = CL / 2.tan pi/6
               ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 3
    AP = CL / 2.tan pi/6
               ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 3
    AP = CL / 2.tan pi/6
               ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 3
    AP = CL / 2.tan pi/6
               ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 3
    AP = CL / 2.tan pi/6
               ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
